--- a/configs/hicr_capsnet_config.json
+++ b/configs/hicr_capsnet_config.json
@@ -24,5 +24,5 @@
         "checkpoint_verbose": true,
         "tensorboard_write_graph": true
     },
-    "numeral_type": "devanagari"
+    "numeral_type": "bangla"
   }
