--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Keras==2.2.4
 matplotlib==3.0.3
 numpy==1.16.3
 pandas==0.24.2
 Pillow==6.0.0
 tensorboard==1.13.1
-tensorflow==1.13.1
+tensorflow==2.0.0a0
